# minsweeper-rust

./: Cargo.toml  Dioxus.toml
assets/: main.css
docs/: index.html
src/: main.rs
