[package]
name = "dx"
version = "0.1.0"
authors = ["Adam Urban <adamurban98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
tokio = { version = "1.38.0", features = ["time"] }
futures-util = "0.3.30"
gloo-timers = { version = "0.3.0", features = ["futures"] }
rng = "0.1.0"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
